# cyrus

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: CyrusEnableIPO.cmake  CyrusGuardInSourceBuilds.cmake  CyrusSetDefaultInstallPrefix.cmake  cyrusConfig.cmake.in
cyrus/: CMakeLists.txt  audio_signal.hpp  cli.cpp  cli.hpp  cyrus_main.cpp  cyrus_main.hpp  device_probing.cpp  device_probing.hpp  fs_header.hpp  main.cpp  patched_audio_file.hpp  sample_conversions.hpp  signal_conversions.hpp  try.hpp  user_message_exception.cpp  user_message_exception.hpp  write_audio.cpp  write_audio.hpp
libcyrus/: CMakeLists.txt  cli.cpp  cli.hpp  device_probing.cpp  device_probing.hpp
tests/: CMakeLists.txt
